Add /routes endpoint
